--- a/docs/modules/broker-ocp/nav.adoc
+++ b/docs/modules/broker-ocp/nav.adoc
@@ -1,2 +1,1 @@
-* xref:assembly-br-planning-a-deployment.adoc[Planning a Deployment]
-* xref:assembly-br-deploying-amq-broker-using-operator.adoc.adoc[Deploying amw broker using Operator]
+* xref:assembly-br-deploying-amq-broker-using-operator.adoc[Deploying amw broker using Operator]
