--- a/docs/modules/broker-ocp/nav.adoc
+++ b/docs/modules/broker-ocp/nav.adoc
@@ -1,1 +1,1 @@
-* xref:assembly-br-deploying-amq-broker-using-operator.adoc[Deploying amw broker using Operator]
+* xref:assembly-br-deploying-amq-broker-using-operator.adoc[Deploying broker using Operator]
