--- a/docs/modules/broker-ocp/pages/assembly-br-operator-lifecycle-manager.adoc
+++ b/docs/modules/broker-ocp/pages/assembly-br-operator-lifecycle-manager.adoc
@@ -5,6 +5,6 @@
 [id='managing-broker-operator-using-operator-lifecycle-manager_{context}']
 = Installing the Operator using the Operator Lifecycle Manager
 
-include::../../modules/broker-ocp/con-br-olm-overview.adoc[leveloffset=+1]
-include::../../modules/broker-ocp/proc-br-installing-broker-operator-in-operatorhub.adoc[leveloffset=+1]
-include::../../modules/broker-ocp/proc-br-deploying-operator-from-operatorhub.adoc[leveloffset=+1]
+include::./con-br-olm-overview.adoc[leveloffset=+1]
+include::./proc-br-installing-broker-operator-in-operatorhub.adoc[leveloffset=+1]
+include::./proc-br-deploying-operator-from-operatorhub.adoc[leveloffset=+1]
