--- a/docs/modules/broker-ocp/partials/con-br-limitations-cr-changes-operator.adoc
+++ b/docs/modules/broker-ocp/partials/con-br-limitations-cr-changes-operator.adoc
@@ -8,8 +8,8 @@
 The following are some important things to note about applying Custom Resource (CR) changes to running broker deployments:
 
 * You cannot dynamically update the `persistenceEnabled` attribute in your CR. To change this attribute, scale your cluster down to zero brokers. Delete the existing CR. Then, recreate and redeploy the CR with your changes, also specifying a deployment size.
-* The value of the `deploymentPlan.size` attribute in your CR overrides any change you make to size of your broker deployment via the `oc scale` command. For example, suppose you use `oc scale` to change the size of a deployment from three brokers to two, but the value of `deploymentPlan.size` in your CR is still `3`. In this case, OpenShift initially scales the deployment down to two brokers. However, when the scaledown operation is complete, the Operator restores the deployment to three brokers, as specified in the CR.
-* As described in xref:proc-br-deploying-operator_{context}[], if you create a broker deployment with persistent storage (that is, by setting `persistenceEnabled=true` in your CR), you might need to provision Persistent Volumes (PVs) for the {BrokerName} Operator to claim for your broker Pods. If you scale down the size of your broker deployment, the Operator releases any PVs that it previously claimed for the broker Pods that are now shut down. However, if you _remove_ your broker deployment by deleting your CR, {BrokerName} Operator *does not* release Persistent Volume Claims (PVCs) for any broker Pods that are still in the deployment when you remove it. In addition, these unreleased PVs are unavailable to any new deployment. In this case, you need to manually release the volumes. For more information, see link:https://docs.openshift.com/container-platform/4.1/storage/understanding-persistent-storage.html#releasing_understanding-persistent-storage[Releasing volumes] in the OpenShift documentation.
+* The value of the `deploymentPlan.size` attribute in your CR overrides any change you make to size of your broker deployment via the `{ClientCommand} scale` command. For example, suppose you use `{ClientCommand} scale` to change the size of a deployment from three brokers to two, but the value of `deploymentPlan.size` in your CR is still `3`. In this case, {ClientTool}  initially scales the deployment down to two brokers. However, when the scaledown operation is complete, the Operator restores the deployment to three brokers, as specified in the CR.
+* As described in xref:proc-br-deploying-operator_{context}[], if you create a broker deployment with persistent storage (that is, by setting `persistenceEnabled=true` in your CR), you might need to provision Persistent Volumes (PVs) for the {BrokerName} Operator to claim for your broker Pods. If you scale down the size of your broker deployment, the Operator releases any PVs that it previously claimed for the broker Pods that are now shut down. However, if you _remove_ your broker deployment by deleting your CR, {BrokerName} Operator *does not* release Persistent Volume Claims (PVCs) for any broker Pods that are still in the deployment when you remove it. In addition, these unreleased PVs are unavailable to any new deployment. In this case, you need to manually release the volumes. For more information, see link:https://docs.openshift.com/container-platform/4.1/storage/understanding-persistent-storage.html#releasing_understanding-persistent-storage[Releasing volumes] in the {ClientTool}  documentation.
 * In {BrokerName} {BrokerVersion}, if you want to configure the following items, you must add the appropriate configuration to the main CR instance *before* deploying the CR for the first time.
 ** xref:proc-br-configuring-broker-storage-size_{context}[The size of the Persistent Volume Claim (PVC) required by each broker in a deployment for persistent storage]
 ** xref:proc-br-configuring-broker-limits-and-requests_{context}[Limits and requests for memory and CPU for each broker in a deployment]
